Fixes + no server on client